--- a/src/AOTReflection/AOTReflection.csproj
+++ b/src/AOTReflection/AOTReflection.csproj
@@ -1,8 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<RootNamespace>Apparatus.AOT.Reflection</RootNamespace>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <LangVersion>latest</LangVersion>
+        <Nullable>enable</Nullable>
+        <RootNamespace>Apparatus.AOT.Reflection</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
